# ml-copypasta

./: README.md  pyproject.toml
ml_copypasta/datasets/: __init__.py  dataset.py  mnist.py
ml_copypasta/layers/: grouped_query_attention.py  nd_grouped_query_attention.py  ndrope.py  rope.py  swiglu.py
